{
    "name": "InputActions",
    "maps": [
        {
            "name": "Plane",
            "id": "c8f949ab-f616-4b74-b507-f8b81f0ca529",
            "actions": [
                {
                    "name": "MoveVector2",
                    "id": "32644ca1-809e-49f9-b33c-81f59ff54367",
                    "expectedControlLayout": "Vector2",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "ViewVector2",
                    "id": "be40a9a1-5fb0-413a-abc7-00c56bf4afb1",
                    "expectedControlLayout": "Vector2",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "RollAxis",
                    "id": "cf856f7f-2b71-42b4-8c6a-0de62dca0d51",
                    "expectedControlLayout": "Axis",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "ThrottleAxis",
                    "id": "fc7d4d0c-7ccd-422d-981a-ef3af20eab2e",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "OpenPausePanel",
                    "id": "91831a9e-af2d-460d-9bb9-9ceb06471ff7",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVector2",
                    "chainWithPrevious": false,
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "Up",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveVector2",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Down",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveVector2",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Left",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveVector2",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Right",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveVector2",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "2D Vector",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewVector2",
                    "chainWithPrevious": false,
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "Up",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "ViewVector2",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Down",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "ViewVector2",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Left",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "ViewVector2",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Right",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "ViewVector2",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "1D Axis",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollAxis",
                    "chainWithPrevious": false,
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "Negative",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "RollAxis",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Positive",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "RollAxis",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "1D Axis",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleAxis",
                    "chainWithPrevious": false,
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "Negative",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "ThrottleAxis",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Positive",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "ThrottleAxis",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "OpenPausePanel",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        },
        {
            "name": "UIPanelGeneral",
            "id": "7f9594f0-0ad3-465b-9274-a90399a6c314",
            "actions": [
                {
                    "name": "Back",
                    "id": "24529f4c-ae06-43df-8ef7-1c8d48b04031",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Back",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        },
        {
            "name": "UIPanelEsc",
            "id": "e3a903eb-19ff-43e7-adba-9b92b8346a72",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "basedOn": "",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}